--- a/style.css
+++ b/style.css
@@ -5,3 +5,19 @@
   color: red;
   font-size: 20px;
 }
+.calendar{
+  width: 100vw;
+  display: flex;
+  flex-flow: wrap;
+}
+.day{
+  width: 200px;
+  height: 100px;
+  border: 1px solid gray;
+}
+.month{
+  width: 500px;
+  height: 200px;
+  color: lightgray;
+  font-size: 50px;
+}
